(NP) 160125 new apis 23321 2