@@ -10,6 +10,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
@@ -35,7 +36,7 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // Разрешённые origin'ы
+        configuration.setAllowedOrigins(List.of("http://localhost:3000")); // Разрешённые origin'ы
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Разрешённые методы
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept")); // Указываем необходимые заголовки
         configuration.setAllowCredentials(true); // Разрешаем credentials
